--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: '2.1'
 jobs:
   run-e2e-by-cli:
     docker:
-      - image: circleci/node:jessie-browsers
+      - image: selenium/node-chrome-debug
     steps:
       - run:
           name: Install mabl CLI
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: check mabl Auth
           command: mabl auth info
-      - run: mabl tests run-alpha --from-plan-id k6gNBmsMmM48DBE1gpoAUQ-p --headless
+      - run: mabl tests run --from-plan-id k6gNBmsMmM48DBE1gpoAUQ-p --headless
 
 workflows:
   install-and-run-test:
