--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - image: selenium/node-chrome-debug
     steps:
       - run:
+          name: Install node.js
+          command: sudo apt update && sudo apt install nodejs npm
+      - run:
           name: Install mabl CLI
           command: sudo npm i -g @mablhq/mabl-cli@latest
       - run:
